fix pom settings to work with jdk8, fix possible NullPointerException,